[metadata]
license_files = license.txt

[bdist_wheel]
universal = 1

[tox:tox]
envlist = {py27,py35,py37,py38,py39,py310}-{linux,macos,windows}

[testenv]
passenv = TERM
platform =
    linux: linux
    macos: darwin
    windows: win32
deps =
    py27: enum34
commands = python -m unittest --verbose test.test_pycrate

[gh-actions]
python =
    2.7: py27
    3.5: py35
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[gh-actions:env]
TOX_OS =
    ubuntu-18.04: linux
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows
